refactor extraction: split scan model workflow and snapshot commands